Delete the form.py file, add a heading and a background to about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,9 @@
-{% include "header.html "%}
+{% include "header.html" %}
+<div class="masthead text-center" style="background-image: url('../static/images/img12.jpg')" >
+    <h1 class="pt-5">About Me</h1>
+</div>
 
-
-<div class="px-4 py-5 my-5 text-left">
+<div class="px-4 py-5 my-5 text-left ">
     <div class="col-lg-6 mx-auto">
     <h1 class="display-5 fw-bold text-body-emphasis">Get to know me!</h1>
 
@@ -25,4 +27,4 @@
 
 
 
-{% include "footer.html "%}
+{% include "footer.html"%}
