--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Richie's Portfolio</title>
      {% block styles %}
     <!-- Load Bootstrap-Flask CSS here -->
