Change logo image, edit the contact page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,9 +12,8 @@
 
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Leave Me A Message!</h1>
-            <p class="lead">You know learning never ends and the best way to learn is by doing.
-             In case you have any job opportunity that matches my skills and experience, don't hesitate to fill out the form and
-                hit the send button.
+            <p class="lead">In case you have any job opportunity that matches my skills and experience, don't hesitate
+                to fill out the form and hit the send button.
             </p>
           </div>
         <div class="col-10 col-sm-8 col-lg-6">
