--- a/templates/header.html
+++ b/templates/header.html
@@ -49,7 +49,7 @@
   <div class="container-fluid px-4 px-lg-5">
     <div class="header__logo-container">
           <div class="header__logo-img-cont">
-              <img src="/static/images/python.jpg" alt="Moh Richmond Logo Image" width="100" style="border-radius:50%" class="header__logo-img">
+              <img src="/static/images/logo.png" alt="Moh Richmond Logo Image" width="150" style="border-radius:50%" class="header__logo-img">
 <!--              <span class="logo header__logo-sub">Moh Richmond</span>-->
           </div>
 
