Made some changes on the footer, header,and the home page

--- a/templates/header.html
+++ b/templates/header.html
@@ -9,6 +9,7 @@
      {% block styles %}
     <!-- Load Bootstrap-Flask CSS here -->
     {{ bootstrap.load_css() }}
+
     <script
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
@@ -46,7 +47,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
-  <div class="container-fluid px-4 px-lg-5">
+  <div class="container px-4 px-lg-5">
     <div class="header__logo-container">
           <div class="header__logo-img-cont">
               <img src="/static/images/logo.png" alt="Moh Richmond Logo Image" width="150" style="border-radius:50%" class="header__logo-img">
@@ -84,5 +85,5 @@
   </div>
 </nav>
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
