--- a/templates/index.html
+++ b/templates/index.html
@@ -42,11 +42,14 @@
                   <li class="item">
                     <p>Flask</p>
                   </li>
+                   <li class="item">
+                    <p>Bootstrap</p>
+                  </li>
 
               </ul>
           </div>
           <div class="feature col" style="text-align:center">
-              <h3 class="fs-2 text-body-emphasis">Libraries</h3>
+              <h3 class="fs-2 text-body-emphasis">Frameworks/Libraries</h3>
               <ul class="list-items " style="list-style-type:none" >
                   <li class="item">
                     <p>NumPy</p>
