Add some changes to the home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
               </ul>
           </div>
           <div class="feature col" style="text-align:center">
-              <h3 class="fs-2 text-body-emphasis">Frameworks/Libraries</h3>
+              <h3 class="fs-2 text-body-emphasis">Libraries</h3>
               <ul class="list-items " style="list-style-type:none" >
                   <li class="item">
                     <p>NumPy</p>
